# camelyon-cnns

./: .gitignore  NOTICE  README.md  pyproject.toml
camelyon_cnns/: __init__.py  __main__.py  datasets.py  main.py
