[tool.poetry]
name = "camelyon-cnns"
version = "0.1"
authors = ["Klaus Strohmenger <Klaus.Strohmenger@htw-berlin.de>", "Christoph Jansen <Christoph.Jansen@htw-berlin.de>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/deep-projects/camelyon-cnns"
homepage = "https://github.com/deep-projects/camelyon-cnns"
description = "CAMELYON CNNs trains Convolutional Neural Networks on the CAMELYON image database."

[tool.poetry.dependencies]
python = "^3.5"
h5py = "^2.9"
scikit-learn = "^0.20.2"
matplotlib = "^3.0"

# optional
tensorflow = {version = "^1.12.0", optional = true}
tensorflow-gpu = {version = "^1.12.0", optional = true}

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
camelyon-cnns = 'camelyon_cnns.main:main'

[tool.poetry.extras]
tf = ["tensorflow"]
tf-gpu = ["tensorflow-gpu"]
